# cpp-advanced-final-audio-processor-text-graph

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  Main.cpp  effects.h  letter_binds.h  midi_pulse.h  oscillators.h  parse_line.h  user_input.h  variant_testing.cpp
App/examples/: example1.txt  example2.txt
